0auth google server implementation work's fine. Login + callback OK.
