# pkg/handler/handler.go
@@ -1,6 +1,9 @@
 package handler
 
 import (
+	errors "github.com/go-openapi/errors"
+
+	"github.com/T-jegou/myTravelNotebook/swagger_gen/models"
 	"github.com/T-jegou/myTravelNotebook/swagger_gen/restapi/operations"
 	"github.com/T-jegou/myTravelNotebook/swagger_gen/restapi/operations/authentication"
 	"github.com/T-jegou/myTravelNotebook/swagger_gen/restapi/operations/health"
@@ -10,6 +13,22 @@ import (
 
 func Setup(api *operations.MyTravelBookAPI) {
 	setupCRUD(api)
+	setupAuthent(api)
+}
+
+func setupAuthent(api *operations.MyTravelBookAPI) {
+	api.OauthSecurityAuth = func(token string, scopes []string) (*models.Principal, error) {
+		ok, err := authenticated(token)
+		if err != nil {
+			return nil, errors.New(401, "error authenticate")
+		}
+		if !ok {
+			return nil, errors.New(401, "invalid token")
+		}
+		prin := models.Principal(token)
+		return &prin, nil
+
+	}
 }
 
 func setupCRUD(api *operations.MyTravelBookAPI) {
